﻿v1.2.3

New: Ready Check
* New: Added option to auto-hide/show while in combat.
* New: Added option to auto-hide/show while playing solo.
* New: Lists all Raid/Party members Health and Mana/Power/Energy.
* New: Lists KBM versions for each Raid/Party member (if available.)
* New: Lists Soul Vitality for each Raid/Party member.
* New: Lists Food buffs on each Raid/Party member. (See available Food types - to be expanded)
* New: Lists Potions/Vials used by each Raid/Party member. (See available Potions - to be expanded)
* New: Lists Weapon Stones used by each Raid/Party member. (See available Stones - to be expanded)
* New: Lists Current and Max Planar charges for each Raid/Party member.
* New: Option to disable/enable the display in the options window.
* New: Toggle the display via the slash command /kbmreadycheck.
* New: Staggered KBM Version retrieval if a player's version has not already been cached.
* New: Color added to various states of KBM Version status.
* New: Color added to Soul Vatility display.
* Change: Moved Ready Check window to its own context.

Ready Check Available Tracking
* Food
** Feast of Cooperation (All) - High
** Kelari Expedition Cherry Cake (Mage, Cleric) - Medium
** Kelari Expedition Chocolate Cake (Warrior, Rogue) - Medium
** Farclan Cherry Cake (Mage, Cleric) - Medium
* Weapon Stones
** Burning Powerstone (Mage, Cleric) - High
** Flaring Glyph (Mage, Cleric) - Medium
** Exquisite Whetstone (Warrior, Rogue) - High
** Fine Whetstone (Warrior, Rogue) - Medium
* Potions/Vials
** Herioc Brightsurge Vial (Mage, Cleric) - High
** Herioc Powersurge Vial (Warrior, Rogue) - High
* Other/Armor
** Performance Insoles (All) - High
** Cusioned Insoles (All) - High

System
* New: Added a new slash command /kbmbuffs. You can macro this with %t or manually type a name to return a list of buffs with KBM ID's on that Unit. (Players or NPC's)