@@ -8068,11 +8068,16 @@ function KBM.MenuOptions.ReadyCheck:Options()
 		KBM.Ready.Settings.Unlocked = bool
 		KBM.Ready.SetLock()
 	end
+	function self:Hidden(bool)
+		KBM.Ready.Settings.Hidden = bool
+		KBM.Ready.UpdateSMode()
+	end
 		
 	local Options = self.MenuItem.Options
 	Options:SetTitle()
 	local ReadyCheck = Options:AddHeader(KBM.Language.Options.Enabled[KBM.Lang], self.Enabled, KBM.Ready.Settings.Enabled)
 	ReadyCheck:AddCheck(KBM.Language.ReadyCheck.Unlock[KBM.Lang], self.Unlock, KBM.Ready.Settings.Unlocked)
+	ReadyCheck:AddCheck(KBM.Language.ReadyCheck.Hidden[KBM.Lang], self.Hidden, KBM.Ready.Settings.Hidden)
 	ReadyCheck:AddCheck(KBM.Language.ReadyCheck.Combat[KBM.Lang], self.Combat, KBM.Ready.Settings.Combat)
 	ReadyCheck:AddCheck(KBM.Language.ReadyCheck.Solo[KBM.Lang], self.Solo, KBM.Ready.Settings.Solo)
 end
